--- a/app/src/main/res/layout/activity_quiz_menu.xml
+++ b/app/src/main/res/layout/activity_quiz_menu.xml
@@ -57,7 +57,16 @@
             android:text="@string/quiz_instruction"
             android:textSize="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_24sdp"/>
-
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_16sdp"
+            android:background="@color/colorPrimaryRed"
+            android:textColor="@color/icons"
+            android:text="@string/reset"
+            android:textSize="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_24sdp"/>
 
     </LinearLayout>
 
